Authenticate role super_admin to create operator user + adjust security config